Fix border-radius on Firefox > 12
From https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius :
Support for the prefixed version (-moz-border-radius) was removed in
Gecko 13.0 (Firefox 13.0 / Thunderbird 13.0 / SeaMonkey 2.10).

Fix to use "border-radius" instead.

--- a/gerrit-gwtexpui/src/main/java/com/google/gwtexpui/globalkey/client/key.css
+++ b/gerrit-gwtexpui/src/main/java/com/google/gwtexpui/globalkey/client/key.css
@@ -26,6 +26,7 @@
   width: 92%;
   z-index: 1002;
   opacity: 0.85;
+  border-radius: 10px;
  }
 
 @if user.agent safari {
